<resources>
    <string name="app_name">ProyectoFinalAndroid</string>
    <string name="colors">Colores</string>
    <string name="numbers">Números</string>
    <string name="days_of_week">Días de la semana</string>
    <string name="favorites">Favoritos</string>
    <string name="more_options">Más opciones</string>
    <string name="translations">Traducciones</string>
    <string name="header_image">Imagen cabecera</string>
    <string name="preferences">Preferencias</string>
    <string name="nightmode">Modo Noche</string>
    <string name="activated">Activado</string>
    <string name="disabled">Desactivado</string>
    <string name="spanish_word">Palabra española</string>
    <string name="english_word">Palabra inglesa</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="accept">Aceptar</string>
    <string name="update">Actualizar</string>
    <string name="fields_empty">Los campos no pueden quedar vacios</string>
    <string name="deleted">Borrado</string>
    <string name="fail_reponse">Fallo en la respuesta</string>
    <string name="updated">Actualizado</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm_delete">¿Estás seguro? Esta acción es irreversible</string>
    <string name="activity_null">La actividad no puede ser nula</string>
    <string name="fab">Fab</string>
    <string name="add">Añadir</string>
    <string name="group">Grupo</string>
    <string name="color_added">Color añadido correctamente</string>
    <string name="number_added">Numero añadido correctamente</string>
    <string name="day_added">Dia añadido correctamente</string>
    <string name="confirm_cancel">¿Estás seguro que quieres cancelar el añadido?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="color_null">El color no puede ser nulo</string>
</resources>