<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_colors"
            android:title="@string/colors"/>
        <item
            android:id="@+id/menu_numbers"
            android:title="@string/numbers"
            />
        <item
            android:id="@+id/menu_daysOfWeek"
            android:title="@string/days_of_week"/>
    </group>

    <item
        android:id="@+id/menu_subheader_favorites"
        android:title="@string/more_options">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_favorites"
                    android:title="@string/favorites"/>
            </group>
        </menu>


    </item>
</menu>